add parser & finish first

--- a/docs/词法分析器实验报告.md
+++ b/docs/词法分析器实验报告.md
@@ -854,6 +854,7 @@ Building Min DFA now... It can take minutes, please be patient and wait...
 4. 增强鲁棒性和报错能力
 5. 引入更多数据结构，完善代码结构组织（如目前的action应该用枚举类而不是字符串表示，又如token是否应该进行封装等）
 6. 将符号表抽离出词法分析器中。符号表应该是词法分析器和语法分析器共同维护的。
+7. 对于注释的支持
 
 ### 软件工程思想
 
