--- a/docs/词法分析器实验报告.md
+++ b/docs/词法分析器实验报告.md
@@ -380,6 +380,7 @@ int DFA::move(int state, int step)
 
 1. 输出完前一个token后，进行下一轮处理时，发现DFA的开始状态对于读头输入无法走通。
 2. 已经读到程序结尾，但状态是非接收状态。
+3. **我们对词法分析中的错误进行了报错处理，报错信息里会给出出错的词所在的行数和偏移量。对于错误的情况，我们总是忽略这些输入，直到识别出一个合法的词素。**
 
 ### 符号表维护
 
@@ -517,8 +518,8 @@ int main() {
     typedef double myDouble;
     myDouble myNum = 10.5;
     char c = 'a';
-    const int hisNum = (int) c;
-    int herNum = myNum - hisNum;
+    const int $hisNum = (int) c; // 非法的标识符$hisNum
+    int herNum = myNum - $hisNum;
     bool flag = true;
     do {
         myNum %= 22;
@@ -535,7 +536,7 @@ int main() {
             herNum++;
             continue;
         }
-        myNum = (myNum != hisNum ? ++myNum : --myNum);
+        myNum = (myNum != $hisNum ? ++myNum : --myNum);
     }
     switch(herNum) {
         case 10:
@@ -552,7 +553,15 @@ int main() {
 
 ### 输出结果
 
-词法分析器给出的输出结果如下，由此可以验证其执行的正确性：
+词法分析器给出的输出结果如下，由此可以验证其执行的正确性。为了方便阅读并说明我们的词法分析器能够成功报错，我们将错误信息单独提取出来如下：
+
+```bash
+error occurs in line (30, 18): $
+error occurs in line (31, 32): $
+error occurs in line (48, 33): $
+```
+
+完整的词法分析结果：
 
 ```c++
 < 0     class   class >
@@ -661,6 +670,7 @@ int main() {
 < 103   ;       ; >
 < 104   const   const >
 < 105   int     int >
+error occurs in line (30, 18): $
 < 106   id      hisNum >
 < 107   =       = >
 < 108   SLP     ( >
@@ -673,6 +683,7 @@ int main() {
 < 115   =       = >
 < 116   id      myNum >
 < 117   -       - >
+error occurs in line (31, 32): $
 < 118   id      hisNum >
 < 119   ;       ; >
 < 120   bool    bool >
@@ -751,6 +762,7 @@ int main() {
 < 193   SLP     ( >
 < 194   id      myNum >
 < 195   ne      != >
+error occurs in line (48, 33): $
 < 196   id      hisNum >
 < 197   ?       ? >
 < 198   ++      ++ >
@@ -844,6 +856,10 @@ Building Min DFA now... It can take minutes, please be patient and wait...
 
 ![execute_with_debug](assets/execute_with_debug.png)
 
+### 使用我们的测试样例
+
+在`./test_case`文件夹中有我们的测试用例`code.cpp`，您可以用上述命令运行我们的词法分析器。
+
 ## Future Work以及软件工程相关思想
 
 ### Future Work（会体现在下学期的课程设计中）
@@ -852,13 +868,13 @@ Building Min DFA now... It can take minutes, please be patient and wait...
 2. 状态表也将以文件形式存储，这样只需要生成一次状态转换表，以后使用时只需要读入状态转换表即可，无须重复生成。
 3. 尝试优化性能（目前的瓶颈在于NFA状态过多，导致生成DFA时过慢）
 4. 增强鲁棒性和报错能力
-5. 引入更多数据结构，完善代码结构组织（如目前的action应该用枚举类而不是字符串表示，又如token是否应该进行封装等）
+5. 引入更多数据结构，完善代码结构组织（如目前的action应该用枚举类而不是字符串表示，又如token应该进行封装等）
 6. 将符号表抽离出词法分析器中。符号表应该是词法分析器和语法分析器共同维护的。
 7. 对于注释的支持
 
 ### 软件工程思想
 
-词法分析的过程是经过一系列步骤的，各个步骤间要实现松耦合，而单个步骤内的实现应该是高内聚的。我们在写代码时为各个类编写了测试文件，在源代码中以`Test`开头，如`TestRegex.cpp`、`TestNFA.cpp`等等。在进行下一步开发时，总是要保证代码可以通过这些测试。由于时间有限，程序的架构并不是十分合理有序，且暂时没有绘制类图，之后会花时间重构。
+词法分析的过程是经过一系列步骤的，各个步骤间要实现松耦合，而单个步骤内的实现应该是高内聚的。我们在写代码时为各个类编写了测试文件，在源代码中以`Test`开头，如`TestRegex.cpp`、`TestNFA.cpp`等等，未来将引入谷歌的测试框架`gtest`进行单元测试。在进行下一步开发时，总是要保证代码可以通过这些测试。由于时间有限，程序的架构并不是十分合理有序，且暂时没有绘制类图，之后会花时间重构。
 
 对于具体实现部分，我们使用了一些数据结构，如转换表使用`map<pair<int, int>, int> trans`这一形式，里面的`pair<int, int>`表示采取的一个`step`，前一个表示当前状态号，后一个表示读入的符号，而`int`则是这一步骤将转换到的状态。因此如果状态1有一条值为`a`的边指向状态2，那么有`trans[pair<int, int>(1, 'a')] = 2`。
 
