--- a/docs/词法分析器实验报告.md
+++ b/docs/词法分析器实验报告.md
@@ -24,7 +24,7 @@
 
 1. 识别语言的正则表达式描述
 
-选用C语言的子集作为词法分析器所识别的语言，参考C99标准，并为了方便起见对词法进行了重新整理。词法的正则表达式可以用lex语言描述如下：
+选用C语言的子集作为词法分析器所识别的语言，参考C99标准，并为了方便起见对词法进行了重新整理。词法的正则表达式可以用`lex`语言描述如下：
 
 ```c++
 /* operators */
@@ -396,6 +396,7 @@ int DFA::move(int state, int step)
 
 ```c++
 // DFA.cpp
+/* 符号表的建立 */
 DFA::DFA(map<pair<int, int>, int> trans, vector<string> actions)
 {
 	// ...
@@ -417,7 +418,7 @@ DFA::DFA(map<pair<int, int>, int> trans, vector<string> actions)
 	symbol_table.push_back("case");
 	// ...
 }
-
+/* 模拟DFA对code进行词法分析 */
 void DFA::scan(const string & code)
 {
 	// ...
@@ -425,9 +426,9 @@ void DFA::scan(const string & code)
 		// 遇到空白符
 		while (遇到空白符) {
 			if (code[peek_forward] == '\n') {
-				// 换行符，行号加一，行内偏移量归零
+				// 换行符，行号加一，行内偏移量置1
 				cnt_line++;
-				cnt_offset = 0;
+				cnt_offset = 1;
 			}
 			else {
 				// 碰到空格或tab
@@ -438,21 +439,21 @@ void DFA::scan(const string & code)
 		// 到达源代码末尾
 		if (peek_forward >= N)
 			return;
-		cnt_offset++; // 找到了一个词素起始点，行内字符序号加1，记录
+		cnt_offset++; // 找到了一个词素起始点，行内偏移+1，用lexme_begin记录
 		lexeme_begin = peek_forward; 		
 		int cur_state = start_state;
 		// 最长匹配原则
 		do {
 			cur_state = move(cur_state, (int)code[peek_forward]);
 			if (cur_state == -1) {
-				// 错误处理
+				...错误处理
 			}
 			peek_forward++;
 			cnt_offset++;
 		} while (peek_forward < N && actions[cur_state] == "");
 		// 读到程序结尾，但是状态是非接受状态
 		if (cur_state != -1 && actions[cur_state] == "") {
-			// 错误处理
+			...错误处理
 		}
 		// 从该接受状态开始，继续走过连续的接收状态，直至走到一个非终结状态或达到死状态phai
 		if (cur_state != -1 && actions[cur_state] != "") {
@@ -475,7 +476,7 @@ void DFA::scan(const string & code)
 					continue;
 				}
 			}
-			// 输出token
+			...输出token
 		}
 	}
 }
@@ -882,6 +883,8 @@ Building Min DFA now... It can take minutes, please be patient and wait...
 
 ## 附录：最小DFA的状态转换表
 
+**说明：group为DFA最小化之后的分组号（即最小DFA的状态号），action为该状态的行为（开始状态标记为start，接收状态标记为接收的模式，空则为非接受状态），之后的（字母：状态号）对表示状态的转移关系。**
+
 group: 0        action: start   !: 1    ": 2    %: 3    &: 4    ': 5    (: 6    ): 7    *: 8    +: 9    ,: 10   -: 11
 .: 12   /: 13   0: 14   1: 14   2: 14   3: 14   4: 14   5: 14   6: 14   7: 14   8: 14   9: 14   :: 15   ;: 16   <: 17
 =: 18   >: 19   ?: 20   A: 21   B: 21   C: 21   D: 21   E: 21   F: 21   G: 21   H: 21   I: 21   J: 21   K: 21   L: 21
@@ -890,7 +893,7 @@ M: 21   N: 21   O: 21   P: 21   Q: 21   R: 21   S: 21   T: 21   U: 21   V: 21   
 n: 21   o: 21   p: 21   q: 21   r: 21   s: 21   t: 21   u: 21   v: 21   w: 21   x: 21   y: 21   z: 21   {: 24   |: 25
 }: 26   ~: 27
 
-\n: 1        action: !       !: 28   ": 28   %: 28   &: 28   ': 28   (: 28   ): 28   *: 28   +: 28   ,: 28   -: 28
+group: 1        action: !       !: 28   ": 28   %: 28   &: 28   ': 28   (: 28   ): 28   *: 28   +: 28   ,: 28   -: 28
 .: 28   /: 28   0: 28   1: 28   2: 28   3: 28   4: 28   5: 28   6: 28   7: 28   8: 28   9: 28   :: 28   ;: 28   <: 28
 =: 29   >: 28   ?: 28   A: 28   B: 28   C: 28   D: 28   E: 28   F: 28   G: 28   H: 28   I: 28   J: 28   K: 28   L: 28
 M: 28   N: 28   O: 28   P: 28   Q: 28   R: 28   S: 28   T: 28   U: 28   V: 28   W: 28   X: 28   Y: 28   Z: 28   [: 28
